@@ -53,17 +53,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                        <forkCount>2</forkCount>
-                        <reuseForks>true</reuseForks>
-                        <argLine>
-                           ${argLine}
-                           --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                           --add-opens=java.base/java.util=ALL-UNNAMED
-                           -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
-                        </argLine>
-                    </configuration>
+                <configuration>
+                    <forkCount>2</forkCount>
+                </configuration>
             </plugin>
 
             <plugin>
